--- a/p2p.dummy.html
+++ b/p2p.dummy.html
@@ -5,13 +5,21 @@
 <script>
 
 var peer = new Peer('p2p-dummy', {key: '8o0fs765i5dn29'});
+var connection_out = peer.connect('p2p');
 var established = false;
 
 peer.on('connection', function(connection) {
     connection.on('data', function(data) {
         established = true;
         console.log('established');
+        console.log(data);
     });
+});
+
+connection_out.on('open', function() {
+    connection_out.send('from dummy');
+    established = true;
+    console.log('established');
 });
 
 function start() {
