--- a/p2p.html
+++ b/p2p.html
@@ -10,11 +10,14 @@ var established = false;
 
 peer.on('connection', function(connection) {
     connection.on('data', function(data) {
+        established = true;
+        console.log('established');
+        console.log(data);
     });
 });
 
 connection_out.on('open', function() {
-    connection_out.send('hi');
+    connection_out.send('from p2p');
     established = true;
     console.log('established');
 });
